--- a/style.css
+++ b/style.css
@@ -212,7 +212,7 @@ iframe {
 .bar3 {
   width: 30px;
   height: 3px;
-  background-color: var(--purp);
+  background-color: var(--orang);
   margin: 5px 0;
   transition: 0.5s;
 }
