--- a/style.css
+++ b/style.css
@@ -16,11 +16,11 @@
 }
 @font-face {
   font-family: "Kabrio Abarth";
-  src: url("/fonts/KabrioAbarth-Regular.woff2") format("woff2"),
-    url("/fonts/KabrioAbarth-Regular.woff") format("woff");
+  src: url("fonts/KabrioAbarth-Regular.woff2") format("woff2"),
+    url("fonts/KabrioAbarth-Regular.woff") format("woff");
 }
 .main {
-  animation: main 15s forwards;
+  animation: main 14s forwards ease-in;
 }
 body,
 html {
@@ -32,10 +32,10 @@ html {
   font-family: "Kabrio Abarth";
   background-image: linear-gradient(
       to top right,
-      rgba(142, 99, 130, 1),
-      rgba(255, 255, 255, 0.7),
-      rgba(1, 136, 202, 0.9),
-      rgba(89, 94, 171, 1)
+      rgba(89, 94, 171, 1),
+      rgba(1, 136, 202, 0.4),
+      rgba(255, 255, 255, 1),
+      rgba(142, 99, 130, 1)
     ),
     url("img/YEP.png");
 }
@@ -73,13 +73,15 @@ footer h1 {
   padding: 0;
   margin: 0;
   font-size: 32px;
-  color: var(--blue);
+  color: var(--orang);
+  text-shadow: 1px 2px var(--purp);
 }
 footer p {
-  color: var(--orang);
   font-size: 16px;
   padding: 0;
   margin: 1vh;
+  color: var(--blue2);
+  text-shadow: 1px 1px var(--orang);
 }
 .mobile-footer {
   text-align: center;
@@ -90,7 +92,8 @@ footer p {
 .trailer {
   font-size: 32px;
   border-top: 2.5px solid var(--purp);
-  color: var(--blue);
+  color: var(--orang);
+  text-shadow: 1px 2px var(--purp);
   padding-top: 3px;
   margin-right: 18vw;
 }
@@ -98,19 +101,21 @@ footer p {
   text-align: center;
   padding: 0;
   font-size: 28px;
-  margin-left: 15vw;
+  margin: 1rem;
   width: fit-content;
   border-bottom: 3px solid var(--purp);
-  color: var(--blue);
+  color: var(--orang);
+  text-shadow: 1px 2px var(--purp);
+  margin-block-end: 0.5em;
+  margin-block-start: 1.5em;
 }
 
-.trailer2:first-of-type {
-  margin-block-start: 1.5em;
-  margin-block-end: -0.5em;
+.trailer2:nth-of-type(1) {
+  margin-left: 40vw;
 }
 
 .trailer2:nth-of-type(2) {
-  margin-left: 65vw;
+  margin-left: 72.5vw;
 }
 
 .frame-container2 {
@@ -119,6 +124,7 @@ footer p {
   align-items: center;
   margin-bottom: 1vh;
 }
+
 iframe {
   padding-top: 20px;
   padding-bottom: 20px;
@@ -212,7 +218,7 @@ iframe {
 .bar3 {
   width: 30px;
   height: 3px;
-  background-color: var(--orang);
+  background-color: var(--purp);
   margin: 5px 0;
   transition: 0.5s;
 }
