--- a/style.css
+++ b/style.css
@@ -111,7 +111,8 @@ footer p {
 }
 
 .trailer2:nth-of-type(1) {
-  margin-left: 40vw;
+  font-size: 48px;
+  margin-left: 37.5vw;
 }
 
 .trailer2:nth-of-type(2) {
