--- a/menu.css
+++ b/menu.css
@@ -44,8 +44,49 @@
   margin: 5px 0;
   transition: 0.5s;
 }
-.change .bar1,
-.change .bar2,
-.change .bar3 {
+
+.menu {
   display: none;
+  position: absolute;
+  width: 100vw;
+  height: 90vh;
+  background-color: #333;
+  z-index: 10;
+}
+
+.menu.active {
+  display: block;
+}
+
+footer.active {
+  background-color: green;
+  z-index: 1000;
+  animation: footer 1s forwards;
+}
+
+#crossButton {
+  position: absolute;
+  top: 5vh;
+  right: 6vw;
+  transition: 0.6s;
+  cursor: pointer;
+  font-size: 38px;
+  z-index: 10;
+  transition: 1s;
+}
+
+#crossButton:hover,
+#crossButton:active {
+  background-color: rgba(255, 255, 255, 1);
+  border-radius: 20px;
+  box-shadow: 5px 5px 10px #333;
+}
+
+@keyframes footer {
+  from {
+    width: 20vw;
+  }
+  to {
+    width: 100vw;
+  }
 }
