--- a/menu.css
+++ b/menu.css
@@ -7,13 +7,8 @@
   z-index: 10;
   transition: 1s;
 }
-.bar4 {
-  font-size: 1.3em;
-  margin-left: 0.2rem;
-}
 
 .mobile-menu {
-  cursor: pointer;
   margin-top: 5vh;
   margin-left: 2vw;
   padding: 10px;
@@ -28,7 +23,6 @@
   box-shadow: 5px 5px 10px #333;
 }
 
-.mobile-menu:hover,
 .mobile-menu:active {
   background-color: rgba(255, 255, 255, 1);
   border-radius: 100%;
@@ -48,26 +42,27 @@
 .menu {
   display: none;
   position: absolute;
-  width: 100vw;
-  height: 90vh;
-  background-color: #333;
+  background: var(--dark-bg);
   z-index: 10;
 }
 
 .menu.active {
+  animation: menu 1s forwards;
   display: block;
 }
 
 footer.active {
-  background-color: green;
-  z-index: 1000;
-  animation: footer 1s forwards;
+  position: fixed;
+  background-image: var(--bg), url("img/YEP.png");
+  z-index: 10;
+  animation: footer 2s forwards;
 }
 
 #crossButton {
   position: absolute;
   top: 5vh;
   right: 6vw;
+  color: var(--purp);
   transition: 0.6s;
   cursor: pointer;
   font-size: 38px;
@@ -88,5 +83,17 @@ footer.active {
   }
   to {
     width: 100vw;
+    height: 20vh;
+  }
+}
+
+@keyframes menu {
+  from {
+    width: 0vw;
+    height: 90vh;
+  }
+  to {
+    width: 100vw;
+    height: 90vh;
   }
 }
