--- a/menu.css
+++ b/menu.css
@@ -42,20 +42,24 @@
 .menu {
   display: none;
   position: absolute;
-  background: var(--dark-bg);
   z-index: 10;
+  background-image: radial-gradient(
+    ellipse at bottom,
+    var(--light-bg),
+    var(--dark-bg)
+  );
 }
 
 .menu.active {
-  animation: menu 1s forwards;
+  animation: menu 0.8s forwards;
   display: block;
 }
 
 footer.active {
   position: fixed;
-  background-image: var(--bg), url("img/YEP.png");
-  z-index: 10;
-  animation: footer 2s forwards;
+  background-image: radial-gradient(var(--light-bg), var(--dark-bg));
+  z-index: 10000;
+  animation: footer 1s forwards;
 }
 
 #crossButton {
