--- a/style.css
+++ b/style.css
@@ -1,18 +1,3 @@
-:root {
-  --blue: rgb(0, 144, 211);
-  --blue2: rgb(1, 136, 202);
-  --purp: rgb(89, 94, 171);
-  --orang: rgb(142, 99, 130);
-  --bg: linear-gradient(
-    to top right,
-    rgba(89, 94, 171, 0.9),
-    rgba(1, 136, 202, 0.4),
-    rgba(255, 255, 255, 1),
-    rgba(142, 99, 130, 1)
-  );
-  --dark-bg: radial-gradient(ellipse at bottom, #1b2735 0%, #090a0f 100%);
-}
-
 * {
   box-sizing: border-box;
   overflow: hidden;
@@ -41,7 +26,7 @@ html {
   margin: 0;
   padding: 0;
   font-family: "Kabrio Abarth";
-  background-image: var(--bg), url("img/YEP.png");
+  transition: background 500ms ease-in-out, color 1000ms ease-in-out;
 }
 
 button {
@@ -52,15 +37,12 @@ button {
   border: none;
   padding: 0;
   margin: 0;
-  color: white;
   font-size: 20px;
 }
 
 button:hover {
   cursor: pointer;
   transition: 0.4s;
-  box-shadow: 5px 5px 5px var(--index-light-text-color);
-  -webkit-box-shadow: 5px 5px 5px var(--index-light-text-color);
 }
 
 .grid {
@@ -82,7 +64,7 @@ button:hover {
 }
 
 .text {
-  border-top: 3px solid var(--purp);
+  border-top: 3px solid var(--text);
   padding-top: 10px;
   margin-bottom: 2vh;
   margin-left: 1vw;
@@ -93,9 +75,9 @@ button:hover {
 
 .trailer {
   font-size: 32px;
-  border-top: 2.5px solid var(--purp);
+  border-top: 2.5px solid var(--text);
   color: var(--orang);
-  text-shadow: 1px 2px var(--purp);
+  text-shadow: 1px 2px var(--text);
   padding-top: 3px;
   margin-right: 18vw;
 }
@@ -105,9 +87,9 @@ button:hover {
   font-size: 28px;
   margin: 1rem;
   width: fit-content;
-  border-bottom: 3px solid var(--purp);
+  border-bottom: 3px solid var(--text);
   color: var(--orang);
-  text-shadow: 1px 2px var(--purp);
+  text-shadow: 1px 2px var(--text);
   margin-block-end: 0.5em;
   margin-block-start: 1.5em;
 }
@@ -143,14 +125,11 @@ iframe {
 }
 .mid {
   animation: slide 100s infinite ease-in-out;
-  min-height: 100vh;
   width: 100%;
   position: relative;
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
-  box-shadow: 1px 1px 5px #333;
-  border-radius: 5px;
 }
 .mobile,
 .mobile-menu {
