--- a/style.css
+++ b/style.css
@@ -29,16 +29,19 @@ html {
 
 button {
   display: inline-block;
-  width: 7rem;
-  height: 3rem;
+  width: 5rem;
+  height: 2rem;
   border-radius: 10px;
   border: none;
   padding: 0;
   margin: 0;
-  font-size: 20px;
+  font-size: 18px;
 }
 
 button:hover {
   cursor: pointer;
+  transform: scale(1.2);
+  transition: 400ms;
+  filter: hue-rotate(45deg);
   transition: 0.4s;
 }
