--- a/color.css
+++ b/color.css
@@ -43,7 +43,6 @@ body.dark-theme {
 }
 
 @media (prefers-color-scheme: dark) {
-  /* defaults to dark theme */
   body {
     background-image: radial-gradient(
         ellipse at bottom,
@@ -51,6 +50,25 @@ body.dark-theme {
         var(--dark-bg)
       ),
       url("img/YEP.png");
+  }
+  .loader,
+  .menu {
+    background-image: radial-gradient(
+      ellipse at bottom,
+      var(--light-bg),
+      var(--dark-bg)
+    );
+  }
+
+  .menu.light,
+  .loader.light {
+    background-image: linear-gradient(
+      to top right,
+      var(--bg-purp),
+      var(--bg-blue),
+      var(--white),
+      var(--orang)
+    );
   }
   body.light-theme {
     background-image: linear-gradient(
