--- a/modal.css
+++ b/modal.css
@@ -35,7 +35,7 @@
   width: 100%;
   max-width: 700px;
   text-align: center;
-  color: var(--blue2);
+  color: white;
   height: 150px;
   font-size: 48px;
 }
