--- a/public/menu.css
+++ b/public/menu.css
@@ -66,6 +66,14 @@ footer.active {
   animation: footer 1s forwards;
 }
 
+.menu .grid {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-template-rows: repeat(5, 1fr);
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
+}
+
 #crossButton {
   position: fixed;
   top: 5vh;
