--- a/public/login.css
+++ b/public/login.css
@@ -8,10 +8,14 @@
 
 #whenSignedOut.not-hidden {
   display: block;
+  float: left;
+  clear: left;
 }
 
 #whenSignedIn.not-hidden {
   display: block;
+  float: left;
+  clear: left;
 }
 
 .name {
