--- a/public/menu.css
+++ b/public/menu.css
@@ -41,6 +41,7 @@
 
 .menu {
   display: none;
+  overflow-y: auto;
   position: absolute;
   z-index: 10;
   background-image: radial-gradient(
@@ -50,8 +51,26 @@
   );
 }
 
+.menu .grid {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
+}
+
+.menu .top {
+  margin-top: 5vh;
+  margin-left: 5vw;
+  margin-right: 5vw;
+  display: flex;
+  justify-content: space-between;
+}
+
 .menu h2 {
+  text-align: center;
+  margin: 2rem;
   color: white;
+  font-size: 5em;
 }
 
 .menu.active {
@@ -66,18 +85,7 @@ footer.active {
   animation: footer 1s forwards;
 }
 
-.menu .grid {
-  display: grid;
-  grid-template-columns: repeat(5, 1fr);
-  grid-template-rows: repeat(5, 1fr);
-  grid-column-gap: 0px;
-  grid-row-gap: 0px;
-}
-
 #crossButton {
-  position: fixed;
-  top: 5vh;
-  right: 6vw;
   color: var(--purp);
   transition: 0.6s;
   cursor: pointer;
@@ -91,6 +99,17 @@ footer.active {
   transform: scale(1.2);
   transition: 400ms;
   filter: hue-rotate(90deg);
+}
+
+.box a {
+  font-size: 48px;
+  transition: 400ms;
+  color: var(--orang);
+}
+
+.box a:hover,
+.box a:active {
+  filter: hue-rotate(180deg);
 }
 
 @keyframes footer {
