--- a/public/modal.css
+++ b/public/modal.css
@@ -25,7 +25,8 @@
 .modal-content {
   margin: auto;
   display: block;
-  width: 40%;
+  width: 50%;
+  margin-top: 10vh;
 }
 
 #caption {
@@ -69,7 +70,7 @@
   top: 5vh;
   right: 10vw;
   color: var(--purp);
-  font-size: 72px;
+  font-size: 5em;
   transition: 0.3s;
   cursor: pointer;
   text-shadow: 1px 1px var(--blue);
