--- a/public/menu.css
+++ b/public/menu.css
@@ -66,6 +66,11 @@
   justify-content: space-between;
 }
 
+.menu .title {
+  width: 10%;
+  margin-top: 0rem;
+}
+
 .menu h2 {
   text-align: center;
   margin: 2rem;
