--- a/public/Css/main.css
+++ b/public/Css/main.css
@@ -35,15 +35,6 @@
 }
 
 .trailer {
-  font-size: 32px;
-  border-top: 2.5px solid var(--purp);
-  color: var(--orang);
-  text-shadow: 1px 2px var(--purp);
-  padding-top: 3px;
-  margin-right: 18vw;
-}
-
-.trailer2 {
   text-align: center;
   padding: 0;
   font-size: 28px;
@@ -56,13 +47,45 @@
   margin-block-start: 1.5em;
 }
 
-.trailer2:nth-of-type(1) {
-  font-size: 48px;
+.trailer:nth-of-type(1) {
   margin-left: 32vw;
 }
 
-.trailer2:nth-of-type(2) {
+.trailer:nth-of-type(2) {
   margin-left: 70vw;
+}
+
+/* !SkROLL */
+.scroll {
+  overflow-y: auto;
+  height: 40vh;
+}
+.scroll::-webkit-scrollbar {
+  width: 0.3em;
+}
+
+.scroll .manga {
+  margin: 1rem;
+  vertical-align: middle;
+  width: 100%;
+  height: auto;
+  border-radius: 5px;
+  box-shadow: 3px 3px 5px #333;
+}
+
+.scroll .trailer {
+  font-size: 2em;
+}
+
+.scroll .trailer:nth-of-type(1) {
+  margin-left: 12vw;
+}
+.scroll .trailer:nth-of-type(2) {
+  margin-left: 22vw;
+}
+
+.scroll .trailer:nth-of-type(3) {
+  margin-left: 1rem;
 }
 
 .frame-container2 {
