--- a/public/Css/media.css
+++ b/public/Css/media.css
@@ -7,9 +7,9 @@
   }
   .mini-img,
   .frame-container,
-  .trailer,
   .big-footer,
-  .container {
+  .container,
+  .scroll {
     display: none !important ;
   }
   .mobile {
@@ -33,6 +33,18 @@
     border-top: 0px;
     transform: scale(1.25, 1.1);
   }
+
+  .modal-content {
+    width: 50% !important;
+  }
+
+  ::-webkit-scrollbar {
+    width: 0.4em;
+  }
+
+  .trailer:nth-of-type(2) {
+    margin-left: 62vw;
+  }
 }
 @media screen and (min-width: 420px) and (max-width: 540px) {
   .grid {
@@ -44,9 +56,9 @@
   }
   .mini-img,
   .frame-container,
-  .trailer,
   .big-footer,
-  .container {
+  .container,
+  .scroll {
     display: none !important ;
   }
   .mobile {
@@ -59,18 +71,21 @@
     right: 10vw;
     display: unset;
   }
+
   .title {
     width: 10rem;
     position: relative;
     margin-right: 45vw;
   }
+
   .text {
     width: 42vh;
     border-top: 0px;
     transform: scale(1.4, 1.2);
     margin-bottom: 6vh;
   }
-  .trailer2 {
+
+  .trailer {
     font-size: 32px;
   }
 
@@ -78,6 +93,14 @@
     zoom: 125%;
     margin: 0px;
     margin-bottom: 5vh;
+  }
+
+  .modal-content {
+    width: 50% !important;
+  }
+
+  ::-webkit-scrollbar {
+    width: 0.4em;
   }
 }
 @media screen and (min-width: 540px) and (max-width: 720px) {
@@ -90,9 +113,9 @@
   }
   .mini-img,
   .frame-container,
-  .trailer,
   .big-footer,
-  .container {
+  .container,
+  .scroll {
     display: none !important ;
   }
   .mobile {
@@ -116,13 +139,17 @@
     transform: scale(1.55, 1.2);
     margin-bottom: 8vh;
   }
-  .trailer2 {
+  .trailer {
     font-size: 38px;
   }
   .frame-container2 {
     zoom: 180%;
     margin: 0px;
     margin-bottom: 3vh;
+  }
+
+  .modal-content {
+    width: 50% !important;
   }
 }
 
@@ -143,10 +170,9 @@
     margin-bottom: 10vh;
     transform: scale(0.9, 1.35);
   }
+
   .trailer {
-    font-size: 28px;
     border-top: 2px solid var(--purp);
-    color: var(--blue);
     padding-top: 2px;
     margin-top: 2vh;
     margin-right: 20vw;
@@ -169,13 +195,58 @@
   .container {
     width: 55%;
   }
+
+  .scroll {
+    font-size: 15px;
+    height: 30vh;
+  }
+  .scroll .trailer:nth-of-type(2) {
+    margin-left: 18vw;
+  }
+  .scroll::-webkit-scrollbar {
+    width: 0.6em;
+  }
 }
 
+@media screen and (min-width: 1440px) and (max-width: 2560px) {
+  .title {
+    width: 20rem;
+    margin-bottom: 2vh;
+  }
+
+  .text {
+    width: 40vh;
+    margin-right: 3vw;
+    margin-bottom: 5vh;
+  }
+
+  .mini-img img {
+    width: 70%;
+    max-height: 25vh;
+    margin-top: 7vh;
+  }
+
+  .trailer:nth-of-type(1) {
+    margin-block-start: 0em;
+  }
+
+  .scroll {
+    height: 45vh;
+  }
+
+  footer h1 {
+    font-size: 38px;
+  }
+
+  footer p {
+    font-size: 28px;
+  }
+}
 @media screen and (min-width: 2560px) {
   .frame-container {
-    zoom: 250%;
-    margin-right: 2vw;
-    margin-left: 2vw;
+    zoom: 200%;
+    margin-right: 1vw;
+    margin-left: 1vw;
   }
 
   .title {
@@ -184,9 +255,7 @@
   }
 
   .text {
-    width: 50vh;
-    margin-right: 3vw;
-    margin-bottom: 5vh;
+    width: 42vh;
   }
 
   .trailer {
@@ -221,5 +290,10 @@
     height: 4px;
     margin: 14px 0;
     transition: 0.5s;
+  }
+
+  .scroll {
+    font-size: 40px;
+    height: 45vh;
   }
 }
