--- a/public/Css/modal.css
+++ b/public/Css/modal.css
@@ -17,7 +17,7 @@
   top: 0;
   width: 100%;
   height: 100%;
-  overflow: hidden;
+  overflow: auto;
   background-color: rgb(0, 0, 0);
   background-color: rgba(0, 0, 0, 0.8);
 }
@@ -25,8 +25,9 @@
 .modal-content {
   margin: auto;
   display: block;
-  width: 50%;
+  width: 25%;
   margin-top: 10vh;
+  overflow-y: auto;
 }
 
 #caption {
