--- a/public/Css/fade.css
+++ b/public/Css/fade.css
@@ -1,6 +1,6 @@
 @keyframes slide {
   0% {
-    background-image: url("https://images.alphacoders.com/968/968249.jpg");
+    background-image: url("https://images5.alphacoders.com/968/thumb-1920-968250.jpg");
   }
   15% {
     background-image: url("https://w.wallha.com/ws/10/0CjkWJtM.jpg");
@@ -9,16 +9,16 @@
     background-image: url("https://i.ytimg.com/vi/dOzvpJLtV20/maxresdefault.jpg");
   }
   45% {
-    background-image: url("https://webbiesworld.com/wp-content/uploads/2020/11/Majo-No-Tabitabi.jpg");
+    background-image: url("https://images2.alphacoders.com/968/thumb-1920-968248.jpg");
   }
   65% {
-    background-image: url("https://64.media.tumblr.com/8ca4ebe7b9c0e6540d5ed040d8659b5d/ff044c79a9f5fbdd-6a/s1280x1920/11436d900e6dac8a3dcb1477aa6a7cffb51e0dd8.jpg");
+    background-image: url("https://cdn.statically.io/img/yuinime.net/f=auto/wp-content/uploads/2020/06/Majo-no-Tabitabi-The-Journey-of-Elaina.jpg");
   }
   85% {
-    background-image: url("https://images2.alphacoders.com/112/1120781.jpg");
+    background-image: url("https://images2.alphacoders.com/110/thumb-1920-1107572.png");
   }
   100% {
-    background-image: url("https://images.alphacoders.com/968/968249.jpg");
+    background-image: url("https://images5.alphacoders.com/968/thumb-1920-968250.jpg");
   }
 }
 @keyframes mini-img {
