--- a/public/Css/menu.css
+++ b/public/Css/menu.css
@@ -48,10 +48,6 @@
 }
 
 .menu .grid {
-  display: grid;
-  grid-template-columns: repeat(5, 1fr);
-  grid-column-gap: 0px;
-  grid-row-gap: 0px;
 }
 
 .menu .top {
@@ -111,6 +107,24 @@ footer.active {
 .box a:hover,
 .box a:active {
   filter: hue-rotate(180deg);
+}
+
+.menu .block {
+  border: 1px solid #000000;
+  max-width: 100vw;
+  max-height: 80vh;
+  overflow-y: auto;
+}
+
+.block::-webkit-scrollbar {
+  display: none;
+}
+
+ul {
+  list-style-type: none;
+  font-size: 48px;
+  transition: 400ms;
+  color: var(--orang);
 }
 
 @keyframes footer {
