--- a/public/Css/toogle.css
+++ b/public/Css/toogle.css
@@ -1,59 +1,86 @@
-/* The switch - the box around the slider */
-.switch {
-  position: relative;
-  display: inline-block;
-  width: 4vw;
-  height: 5vh;
+#toggle_checkbox {
+  display: none;
 }
 
-/* Hide default HTML checkbox */
-.switch input {
-  opacity: 0;
-  width: 0;
-  height: 0;
-}
-
-/* The slider */
-.slider {
+label {
+  display: block;
   position: absolute;
-  cursor: pointer;
-  top: 0px;
-  left: 0;
+  top: 20%;
   right: 0;
-  bottom: 0;
+  left: 0;
+  width: 116px;
+  height: 56px;
+  margin: 0 auto;
   background-color: white;
-  transition: 0.4s;
+  border-radius: 56px;
+  transform: translateY(-50%);
+  cursor: pointer;
+  transition: 0.3s ease background-color;
+  overflow: hidden;
+  user-select: none;
 }
 
-.slider:before {
+#star {
   position: absolute;
-  content: "";
-  width: 2rem;
-  height: 2rem;
-  left: 0px;
-  bottom: 0px;
-  background-color: black;
-  transition: 0.4s;
-}
-
-.slider::after {
-  content: "🌟 🌙";
-}
-
-input:checked + .slider {
-  background-color: black;
-}
-
-input:checked + .slider:before {
-  transform: translateX(1.4vw);
-  background-color: white;
-}
-
-/* Rounded sliders */
-.slider {
-  border-radius: 20px;
-}
-
-.slider.round:before {
+  top: 13px;
+  left: 13px;
+  width: 30px;
+  height: 30px;
+  background-color: #fafd0f;
+  transform: scale(1);
   border-radius: 50%;
+  transition: 0.3s ease top, 0.3s ease left, 0.3s ease transform,
+    0.3s ease background-color;
+  z-index: 1;
+}
+
+.star {
+  position: relative;
+  top: 0;
+  left: -7px;
+  font-size: 54px;
+  line-height: 28px;
+  color: #fafd0f;
+  transition: 0.3s ease color;
+}
+
+#moon {
+  position: absolute;
+  bottom: -52px;
+  right: 8px;
+  width: 40px;
+  height: 40px;
+  background-color: #fff;
+  border-radius: 50%;
+  transition: 0.3s ease bottom;
+}
+
+#moon:before {
+  content: "";
+  position: absolute;
+  top: -12px;
+  left: -17px;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  transition: 0.3s ease background-color;
+}
+
+#toggle_checkbox:checked + label {
+  background-color: #000;
+}
+
+#toggle_checkbox:checked + label #star {
+  top: 3px;
+  left: 64px;
+  transform: scale(0.4);
+  background-color: yellow;
+}
+
+#toggle_checkbox:checked + label #moon {
+  bottom: 8px;
+}
+
+#toggle_checkbox:checked + label #moon:before {
+  background-color: #000;
 }
