--- a/public/Css/toogle.css
+++ b/public/Css/toogle.css
@@ -3,7 +3,7 @@
 }
 
 label {
-  /* display: block; */
+  display: block;
   width: 7em;
   height: 3em;
   margin: 0 auto;
@@ -11,7 +11,7 @@ label {
   border-radius: 56px;
   transform: translateY(-50%);
   cursor: pointer;
-  transition: 0.3s ease background-color;
+  transition: 0.4s ease background-color;
   overflow: hidden;
   user-select: none;
 }
@@ -25,8 +25,8 @@ label {
   background-color: #fafd0f;
   transform: scale(1);
   border-radius: 50%;
-  transition: 0.3s ease top, 0.3s ease left, 0.3s ease transform,
-    0.3s ease background-color;
+  transition: 0.5s ease top, 0.5s ease left, 0.4s ease transform,
+    0.4s ease background-color;
   z-index: 1;
 }
 
@@ -37,7 +37,7 @@ label {
   font-size: 54px;
   line-height: 28px;
   color: #fafd0f;
-  transition: 0.3s ease color;
+  transition: 0.4s ease color;
 }
 
 #moon {
@@ -48,7 +48,7 @@ label {
   height: 40px;
   background-color: #fff;
   border-radius: 50%;
-  transition: 0.3s ease bottom;
+  transition: 0.4s ease bottom;
 }
 
 #moon:before {
@@ -59,7 +59,7 @@ label {
   width: 40px;
   height: 40px;
   border-radius: 50%;
-  transition: 0.3s ease background-color;
+  transition: 0.6s ease background-color;
 }
 
 #toggle_checkbox:checked + label {
