--- a/public/Css/media.css
+++ b/public/Css/media.css
@@ -1,4 +1,5 @@
 @media screen and (max-width: 440px) {
+  /* !Mobile */
   .grid {
     display: unset !important;
   }
@@ -12,8 +13,14 @@
   .scroll {
     display: none !important ;
   }
+
   .mobile {
     display: unset !important ;
+  }
+
+  .menu-content {
+    display: unset !important ;
+    overflow-y: scroll;
   }
 
   .mobile-menu {
@@ -46,6 +53,35 @@
   .trailer:nth-of-type(2) {
     margin-left: 62vw;
   }
+
+  /* !Mwnu */
+  .menu-content {
+    display: unset !important ;
+  }
+  .menu {
+    overflow-y: scroll !important;
+  }
+
+  #slider {
+    display: none !important;
+  }
+
+  .menu .title {
+    width: 70%;
+    margin: 3rem;
+    margin-top: 1rem;
+  }
+
+  .menu label,
+  #play,
+  .menu .login,
+  .menu #whenSignedIn {
+    position: unset !important;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 2em auto;
+  }
 }
 @media screen and (min-width: 420px) and (max-width: 540px) {
   .grid {
@@ -65,6 +101,12 @@
   .mobile {
     display: unset !important ;
   }
+
+  .menu-content {
+    display: unset !important ;
+    overflow-y: scroll;
+  }
+
   .mobile-menu {
     position: absolute;
     overflow: hidden;
@@ -103,6 +145,35 @@
   ::-webkit-scrollbar {
     width: 0.4em;
   }
+
+  /* !Mwnu */
+  .menu-content {
+    display: unset !important ;
+  }
+  .menu {
+    overflow-y: scroll !important;
+  }
+
+  #slider {
+    display: none !important;
+  }
+
+  .menu .title {
+    width: 70%;
+    margin: 3rem;
+    margin-top: 1rem;
+  }
+
+  .menu label,
+  #play,
+  .menu .login,
+  .menu #whenSignedIn {
+    position: unset !important;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 2em auto;
+  }
 }
 @media screen and (min-width: 540px) and (max-width: 720px) {
   .grid {
@@ -119,9 +190,16 @@
   .scroll {
     display: none !important ;
   }
+
   .mobile {
     display: unset !important ;
   }
+
+  .menu-content {
+    display: unset !important ;
+    overflow-y: scroll;
+  }
+
   .mobile-menu {
     position: absolute;
     overflow: hidden;
@@ -152,9 +230,67 @@
   .modal-content {
     width: 50% !important;
   }
+
+  /* !Menu */
+  .menu-content {
+    display: unset !important ;
+  }
+  .menu {
+    overflow-y: scroll !important;
+  }
+
+  #slider {
+    display: none !important;
+  }
+
+  .menu .title {
+    width: 70%;
+    margin: 3rem;
+    margin-top: 1rem;
+  }
+
+  .menu label,
+  #play,
+  .menu .login,
+  .menu #whenSignedIn {
+    position: unset !important;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 2em auto;
+  }
 }
 
 @media screen and (min-width: 721px) and (max-width: 1024px) {
+  /* !Meun */
+  .menu-content {
+    display: unset !important ;
+  }
+  .menu {
+    overflow-y: scroll !important;
+  }
+
+  #slider {
+    display: none !important;
+  }
+
+  .menu .title {
+    width: 70%;
+    margin: 3rem;
+    margin-top: 1rem;
+  }
+
+  .menu label,
+  #play,
+  .menu .login,
+  .menu #whenSignedIn {
+    position: unset !important;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 2em auto;
+  }
+
   .frame-container {
     zoom: 90%;
     margin-top: 2vh;
@@ -242,6 +378,9 @@
   footer p {
     font-size: 28px;
   }
+  .menu .box {
+    margin-top: 1em;
+  }
 }
 @media screen and (min-width: 2560px) {
   .frame-container {
@@ -296,5 +435,8 @@
   .scroll {
     font-size: 40px;
     height: 45vh;
+  }
+  .menu .box {
+    margin-top: 3em;
   }
 }
