--- a/public/Css/modal.css
+++ b/public/Css/modal.css
@@ -15,8 +15,8 @@
   padding-top: 12vh;
   left: 0;
   top: 0;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   overflow: auto;
   background-color: rgb(0, 0, 0);
   background-color: rgba(0, 0, 0, 0.8);
@@ -32,14 +32,16 @@
 
 #caption {
   padding-top: 8vh;
+  padding-bottom: 8vh;
   margin: auto;
   display: block;
   width: 100%;
-  max-width: 700px;
+  max-width: 1000px;
   text-align: center;
   color: white;
   height: 150px;
   font-size: 48px;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .modal-content,
