--- a/public/style.css
+++ b/public/style.css
@@ -46,20 +46,26 @@ button {
   cursor: pointer;
 }
 
-button::before {
-  content: "»";
-  color: var(--blue);
-  font-size: 2rem;
-  opacity: 0;
-  margin-left: -10px;
-  transition: 0.5s;
+button:before {
+  width: 100%;
+  height: 100%;
+  content: "";
+  margin: auto;
+  position: absolute;
+  top: -100%;
+  left: -100%;
+  background: #212121;
+  transition: all 0.5s;
+  z-index: -1;
 }
 
-button:hover::before {
-  opacity: 1;
-  margin-left: 15px;
-  transition: 400ms;
-  transition: 0.4s;
+button:hover {
+  color: white;
+}
+
+button:hover:before {
+  top: 0;
+  left: 0;
 }
 
 .scroll {
