--- a/public/Css/login.css
+++ b/public/Css/login.css
@@ -22,8 +22,9 @@
   width: 15vw;
   opacity: 0;
   z-index: 0;
-  background: var(--orang);
-  border-top: 3px solid var(--purp);
+  background: white;
+  color: #212121;
+  border-top: 3px solid var(--dark-bg);
 
   border-bottom-right-radius: 20px;
   border-bottom-left-radius: 20px;
@@ -35,7 +36,6 @@
   margin-left: 10rem;
   margin-top: 1rem;
   padding: 0.5rem;
-  color: white;
   box-shadow: 0 10px 20px -8px rgba(0, 0, 0, 0.7);
   transform: translateX(-40%);
 
@@ -83,8 +83,8 @@
   font-size: 36px;
   padding-top: 0rem;
   padding-bottom: 0.5rem;
-  color: white;
   cursor: default;
+  font-weight: 300;
 }
 
 .signOut {
